feat(classroom): edit and delete learning videos
